k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab-service
spec:
  selector:
    app: lab-nginx
  ports:
  - port: 80
    targetPort: 80
