k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab-ingress
spec:
  rules:
  - host: lab.local
    http:
     paths:
     - path: /
       pathType: Prefix
       backend:
        service:
          name: lab-service
          port:
            number: 80
